overflow fixed

--- a/src/style.scss
+++ b/src/style.scss
@@ -30,6 +30,7 @@ body {
     .sidebar {
         width: 250px;
         height: 100vh;
+        overflow-y: auto;
         background-color: $white-color;
         position: fixed;
         top: 0;
